# mnist

./: .gitignore  Dockerfile  pyproject.toml  run.sh  run_db.sh
note/: Untitled.ipynb  mnistp.ipynb
src/mnist/: .db.py.swp  .main.py.swp  db.py  main.py  worker.py
src/mnist/model/: cnn_model.py
