[project]
name = "mnist"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mangG907", email = "mang.gee@gmail.com"},
]
dependencies = [
    "python-multipart>=0.0.9",
    "pymysql>=1.1.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
