[project]
name = "mnist"
version = "0.3.1"
description = "Default template for PDM package"
authors = [
    {name = "mangG907", email = "mang.gee@gmail.com"},
]

dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "PyMySQL>=1.1.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
]

requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = "src"

[project.scripts]
ml-worker = 'mnist.worker:run'
